--- a/src/styles/about.css
+++ b/src/styles/about.css
@@ -1,11 +1,11 @@
-h1, h5{
-    color: white !important;
+div#about-main{
+    margin-top: 140px;
 }
 
-.about-headers{
-    font-size: 25px;
-    font-weight: 600;
-    margin: 70px 0 30px 0;
+h1.about-headers{
+    /* font-size: 25px; */
+    /* font-weight: 600; */
+    margin: 40px auto;
 }
 
 #about-container{
@@ -23,14 +23,12 @@ h1, h5{
     display: flex;
     flex-direction: column;
     width: 95vw;
-
-
     background-color: rgb(36, 35, 39);
     border: 2px solid rgb(131, 131, 131);
     border-radius: 10px;
     padding: 10px;
     align-items: center;
-    margin: 40px auto;
+    margin: 40px 20px;
 }
 
 .headshot-card{
@@ -44,11 +42,11 @@ img.img{
 }
 
 .buttons{
-    border: 2px solid rgb(194, 225, 20);
+    border: 2px solid rgb(21, 170, 148);
+    color: rgb(21, 170, 148);
     width: 300px;
     padding: 10px;
     border-radius: 8px;
-    color: rgb(194, 225, 20);
     font-size: 20px;
     font-weight: 600;
     background-color: rgb(36, 35, 39);
@@ -61,7 +59,7 @@ img.img{
 
 @media(min-width: 767px){
     .about-headers{
-        font-size: 45px;
+        /* font-size: 45px; */
     }
 
     img.img{
@@ -70,6 +68,12 @@ img.img{
 
     .about-card{
         width: 80vw;
+        transition: transform .4s;
+    }
+
+    .about-card:hover{
+        border: 2px solid rgb(194, 225, 20);
+        transform: scale(1.05);
     }
 }
 
@@ -90,8 +94,9 @@ img.img{
     }
 
     .about-card{
-        height: 60vh;
-        margin: 0 10px;
+        max-width: 819px;
+        height: 500px;
+        margin: 0 20px;
     }
 }
 
@@ -101,10 +106,6 @@ img.img{
     }
     img.img{
         width: 30vw !important;
-    }
-
-    .about-card{
-        height: 50vh;
     }
 }
 
@@ -116,11 +117,6 @@ img.img{
     #about-container p{
         width: 30vw !important;
         font-size: 18px;
-    }
-
-    .about-card{
-        width: 30vw;
-        height: 69vh;
     }
 
     .about-card p{
