--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -15,14 +15,15 @@ div#stock-ticker-container{
 
 h1.headline{
   font-family: 'SubwayTicker';
-  color: #C2E114!important;
-  font-size: 25px !important;
+  color: rgb(21, 170, 148)!important;
+  font-size: 35px !important;
   white-space: nowrap;
-  /* margin-bottom: 20px; */
+  margin: 0 auto;
 }
 
 @media(min-width: 767px){
   h1.headline{
-    font-size: 65px;
+    font-size: 45px !important;
+    text-align: center;
   }
 }
