--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -1,122 +1,218 @@
+@media(min-width: 320px){
+  p{
+    
+    padding: 0 8px;
+  }
 
-a{
-  color: inherit;
-  font-weight: inherit;
-}
+  #upper-container{
+    margin-top: 120px;
+  }
 
-p{
-  font-size: 15px;
-  text-indent: 0.8rem;
-  padding: 0 8px;
-}
+  img#pdf{
+    width: 95vw;
+    height: auto;
+  }
 
-h1.home-headers{
-  margin: 20px 0;
-}
+  img.vendors-image{
+    width: 90vw !important;
+    padding: 0;
+  }
 
-h4#pdf-link, a{
-  list-style: none !important;
-  color: rgb(21, 170, 148) !important;
-  padding-top: 20px !important;
-  font-weight: 500;
-  transition: transform .2s;
-}
-
-h4#pdf-link:hover{
-  transform: scale(1.3);
-}
-
-div.slider{
-  position: relative;
-}
-
-h4#tools-link{
-  color: rgb(21, 170, 148) !important;
-  padding-top: 20px !important;
-  font-weight: 500;
-  list-style: none !important;
-}
-
-#upper-container{
-  /* padding: 20px 20px; */
-  margin-top: 120px;
-}
-
-#pdf-container{
-  display: flex;
-  flex-direction: column;
-  margin: 40px auto !important;
-}
-
-#pdf{
-  width: 360px;
-  height: 466px;
-  justify-content: space-evenly;
-  border-radius: 8px;
-  overflow: hidden;
-  margin: 0 auto;
-}
-
-#stock-think-tank-card{
-  margin-top: 20px;
-}
-
-#mid-container{
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: center;
-  margin: 20px auto !important;
-}
-
-div.mid-cont-card{
-  display: flex;
-  flex-direction: column;
-  justify-content: space-evenly;
-  align-items: center;
-  border: 2px solid rgb(131, 131, 131) !important;
-  border-radius: 8px;
-  margin: 10px 10px;
-  padding-top: 8px;
-  width: 300px;
-  height: 300px;
-  transition: transform .4s;
-}
-div.mid-cont-card:hover{
-  transform: scale(1.1);
-  box-shadow: 2px 2px 25px rgba(0, 0, 0, 0.541);
-  border: 2px solid rgb(194, 225, 20) !important;
-  background-color: rgb(21, 21, 22);
-}
-
-p.path-text{
-  text-align: center;
-}
-
-#lower-container{
-  display: flex;
-  flex-direction: column;
-  padding-bottom: 40px !important;
-}
-
-#vendors-card{
-  background-color: rgba(63, 62, 62, 0.651);
-  border: 2px solid rgb(131, 131, 131);
-  border-radius: 8px;
-  width: 95vw;
-  margin: 40px auto;
-}
-
-img.vendors-image{
-  width: 350px;
-  padding: 40px 20px;
+  h4#pdf-link, a{
+    list-style: none !important;
+    color: rgb(21, 170, 148) !important;
+    padding-top: 20px !important;
+    font-weight: 500;
+    transition: transform .2s;
+  }
   
+  h4#pdf-link:hover{
+    transform: scale(1.3);
+  }
+
+  #mid-container{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    margin: 20px auto !important;
+  }
+  
+  div.mid-cont-card{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    border: 2px solid rgb(131, 131, 131) !important;
+    border-radius: 8px;
+    margin: 10px 10px;
+    padding-top: 8px;
+    width: 300px;
+    height: 300px;
+    transition: transform .4s;
+  }
+  div.mid-cont-card:hover{
+    transform: scale(1.1);
+    box-shadow: 2px 2px 25px rgba(0, 0, 0, 0.541);
+    border: 2px solid rgb(194, 225, 20) !important;
+    background-color: rgb(21, 21, 22);
+  }
+
+  #lower-container{
+    display: flex;
+    flex-direction: column;
+    padding-bottom: 40px !important;
+  }
+  
+  #vendors-card{
+    background-color: rgba(63, 62, 62, 0.651);
+    border: 2px solid rgb(131, 131, 131);
+    border-radius: 8px;
+    width: 95vw;
+    margin: 40px auto;
+  }
+  
+  img.vendors-image{
+    width: 350px;
+    padding: 40px 20px;
+    
+  }
+}
+
+@media(min-width: 375px){
+
+  a{
+    color: inherit;
+    font-weight: inherit;
+    padding: 0 !important;
+  }
+  
+  p{
+    font-size: 15px;
+    text-indent: 0.8rem;
+    padding: 0 8px;
+  }
+  
+  h1.home-headers{
+    margin: 20px 0;
+  }
+  
+  h4#pdf-link, a{
+    list-style: none !important;
+    color: rgb(21, 170, 148) !important;
+    padding-top: 20px !important;
+    font-weight: 500;
+    transition: transform .2s;
+  }
+  
+  h4#pdf-link:hover{
+    transform: scale(1.3);
+  }
+  
+  div.slider{
+    position: relative;
+  }
+  
+  h4#tools-link{
+    color: rgb(21, 170, 148) !important;
+    padding-top: 20px !important;
+    font-weight: 500;
+    list-style: none !important;
+  }
+  
+  #upper-container{
+    /* padding: 20px 20px; */
+    margin-top: 120px;
+  }
+  
+  #pdf-container{
+    display: flex;
+    flex-direction: column;
+    margin: 40px auto !important;
+  }
+  
+  #pdf{
+    width: 360px;
+    height: 466px;
+    justify-content: space-evenly;
+    border-radius: 8px;
+    overflow: hidden;
+    margin: 0 auto;
+  }
+  
+  #stock-think-tank-card{
+    margin-top: 20px;
+  }
+  
+  #mid-container{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    margin: 20px auto !important;
+  }
+  
+  div.mid-cont-card{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    border: 2px solid rgb(131, 131, 131) !important;
+    border-radius: 8px;
+    margin: 10px 10px;
+    padding-top: 8px;
+    width: 300px;
+    height: 300px;
+    transition: transform .4s;
+  }
+  div.mid-cont-card:hover{
+    transform: scale(1.1);
+    box-shadow: 2px 2px 25px rgba(0, 0, 0, 0.541);
+    border: 2px solid rgb(194, 225, 20) !important;
+    background-color: rgb(21, 21, 22);
+  }
+  
+  p.path-text{
+    text-align: center;
+  }
+  
+  #lower-container{
+    display: flex;
+    flex-direction: column;
+    padding-bottom: 40px !important;
+  }
+  
+  #vendors-card{
+    background-color: rgba(63, 62, 62, 0.651);
+    border: 2px solid rgb(131, 131, 131);
+    border-radius: 8px;
+    width: 95vw;
+    margin: 40px auto;
+  }
+  
+  img.vendors-image{
+    width: 350px;
+    padding: 40px 20px;
+    
+  }
 }
 
 @media(min-width: 424px){
 
   #mid-container{
     margin: 0 auto !important;
+  }
+}
+
+@media(min-width: 468px){
+  #upper-container{
+    margin-top: 160px;
+  }
+}
+
+@media(min-width: 667px){
+  #upper-container{
+    margin-top: 190px;
   }
 }
 
@@ -155,8 +251,16 @@ img.vendors-image{
     justify-content: space-around;
   }
 
+  img.vendors-image{
+    width: 45vw !important;
+  }
+
   div#vendors-card{
+    display: flex;
+    flex-wrap: wrap;
     width: 95vw;
+    align-items: center;
+    justify-content: space-evenly;
   }
 }
 
@@ -220,48 +324,75 @@ img.vendors-image{
   }
 }
 
-@media(min-width: 1439px){
+@media(min-width: 1116px){
   h1.home-headers{
     /* font-size: 55px; */
-    /* margin-bottom: 10px; */
+    margin-top: 60px !important;
   }
+
+  #pdf-container{
+    margin: 80px auto !important;
+  }
+
+  img#pdf{
+    margin: 40px;
+  }
+
+  
+  img.vendors-image{
+    width: 20vw !important;
+  }
+  
+}
+
+@media(min-width: 1218px){
+  img#pdf{
+    margin: 100px;
+  }
+}
+
+@media(min-width: 1439px){
   
   div#main-banner{
     width: 1280px !important;
   }
-
+  
   div.slider{
     max-width: 1280px;
   }
-
+  
   #pdf{
     width: 500px !important;
     height: 647px !important;
   }
-
+  
   #pdf-container{
     width: 90vw;
     /* margin: 80px auto !important; */
   }
-
+  
   #mid-container{
     /* width: 57vw; */
     justify-content: space-around;
   }
-
+  
   #lower-container{
     display: flex;
     flex-direction: column;
-    width: 55vw;
+    width: 95vw;
     margin: 0 auto;
     align-items: center;
     justify-content: center;
   }
+
+  div#vendors-card{
+    width: 95vw !important;
+  }
 }
 
-@media(min-width: 1779px){
+@media(min-width: 1879px){
   #pdf-container{
-    width: 75vw;
+    width: 85vw;
   }
   #mid-container{
     justify-content: center;
@@ -272,7 +403,11 @@ img.vendors-image{
   }
 
   #lower-container{
-    width: 75vw;
+    width: 85vw;
+  }
+
+  img.vendors-image{
+    width: 15vw !important;
   }
 }
 
