--- a/src/styles/media.css
+++ b/src/styles/media.css
@@ -7,6 +7,7 @@
   }
 
 div#main-video-card{
+    background-color: rgb(21, 21, 22);
     border: 2px outset rgba(63, 62, 62, 0.651) !important;
     border-radius: 8px;
     width: 95vw;
