--- a/src/styles/about.css
+++ b/src/styles/about.css
@@ -28,7 +28,7 @@ h1.about-headers{
     border-radius: 10px;
     padding: 10px;
     align-items: center;
-    margin: 40px 20px;
+    margin: 40px auto;
 }
 
 .headshot-card{
