final touches on all pages complete for all screen sizes

--- a/src/styles/media.css
+++ b/src/styles/media.css
@@ -7,17 +7,52 @@
   }
 
 div#main-video-card{
-    background-color: rgb(21, 21, 22);
-    border: 2px outset rgba(63, 62, 62, 0.651) !important;
+    /* display: flex; */
+    /* flex-direction: column; */
+    position: relative;
+    /* justify-content: center; */
+    /* background-color: rgb(21, 21, 22);
+    border: 2px outset rgba(63, 62, 62, 0.651) !important; */
+    /* border: 2PX SOLID RED; */
     border-radius: 8px;
-    width: 95vw;
-    margin: 40px auto !important;
+    max-width: 1280px !important;
+    max-height: 500px !important;
+    /* width: 95vw !important; */
+    /* height: 500px !important; */
+    margin: 0 auto !important;
+    padding-bottom: 56.25%;
 }
 
 div#main-video{
-    width: 92vw !important;
-    height: 30vh !important;
-    margin: 10px auto;
+    max-width: 1280px !important;
+    max-height: 500px !important;
+    width: 98% !important;
+    height: 100% !important;
+    position: absolute;
+    top: 0;
+    border: 2px outset rgba(63, 62, 62, 0.651) !important;
+    left: 1%;
+    margin: 0 auto;
+    border: 2px solid;
+}
+
+.main-video-title{
+    display: flex;
+    justify-content: flex-start;
+    width: 95vw !important;
+    max-width: 1280px !important;
+}
+
+.main-video-title h3{
+    font-size: 16px;
+    font-weight: 600;
+    width: 90%;
+    height: 0;
+    text-align: left;
+    /* border: 2px solid yellow; */
+    position: absolute;
+    bottom: -5%;
+    left: 2%;
 }
 
 .vids-cont-label{
@@ -53,7 +88,9 @@ div.vid-slot{
     font-size: 16px;
     font-weight: 600;
     text-align: left;
-    padding: 20px;
+    margin-left: 20px;
+    /* position: absolute; */
+    /* bottom: -23%; */
 }
 
 div.video-card-container{
@@ -65,13 +102,10 @@ div.video-card-container{
 }
 
 @media(min-width: 767px){
-    /* div#main-video-card{
-        width: 90vw !important;
-    } */
 
-    div#main-video{
+    /* div#main-video{
         height: 40vh !important;
-    }
+    } */
 
     div.video-card{
         width: 44vw !important;
@@ -85,34 +119,32 @@ div.video-card-container{
 @media(min-width: 1023px){
     div.video-card{
         max-width: 450px;
-        height: 32vh !important;
+        /* height: 32vh !important; */
     }
 
-    div#main-video{
-        height: 55vh !important;
-        width: 75vw !important;
-        /* max-height: 490px !important;
-        max-width: 800px !important; */
-    }
+    /* div#main-video{
+        min-height: 90% !important;
+        width: 90% !important;
+        aspect-ratio: 4 / 3 !important;
+    } */
 
-    div#main-video-card{
+    /* div#main-video-card{
         height: 65vh !important;
         width: 80vw !important;
-    }
+    } */
 }
 
 @media(min-width: 1439px){
     div#main-video{
-        max-height: 540px !important;
-        max-width: 1080px !important;
+        /* width: 98% !important; */
         /* max-height: 490px !important;
         max-width: 800px !important; */
     }
 
     div#main-video-card{
-        max-height: 620px !important;
-        max-width: 1095px !important;
-        margin: 0 auto;
+        /* max-height: 620px !important; */
+        /* max-width: 900px !important; */
+        /* margin: 0 auto; */
     }
 
     .video-title{
