--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -1,5 +1,6 @@
 @media(min-width: 320px){
   p{
+    margin-top: 10px;
     padding: 0 8px;
   }
   
@@ -9,6 +10,7 @@
   
   div.slider{
     position: relative;
+    margin: 40px auto;
   }
 
   img#pdf{
@@ -21,10 +23,17 @@
     padding: 0;
   }
 
+  #pdf-link{
+    border: 2px solid rgb(21, 170, 148);
+    border-radius: 8px;
+    width: 300px;
+    margin: 0 auto;
+  }
+
   h4#pdf-link, a{
     list-style: none !important;
     color: rgb(21, 170, 148) !important;
-    padding-top: 20px !important;
+    padding: 20px 0 !important;
     font-weight: 500;
     transition: transform .2s;
   }
@@ -68,7 +77,7 @@
   }
   
   #vendors-card{
-    background-color: rgba(63, 62, 62, 0.651);
+    background-color: rgb(21, 21, 22);
     border: 2px solid rgb(131, 131, 131);
     border-radius: 8px;
     width: 95vw;
@@ -95,7 +104,7 @@
     padding: 0 8px;
   }
   
-  h1.home-headers{
+  .home-headers{
     margin: 20px 0;
   }
   
@@ -180,13 +189,13 @@
     padding-bottom: 40px !important;
   }
   
-  #vendors-card{
+  /* #vendors-card{
     background-color: rgba(63, 62, 62, 0.651);
     border: 2px solid rgb(131, 131, 131);
     border-radius: 8px;
     width: 95vw;
     margin: 40px auto;
-  }
+  } */
   
   img.vendors-image{
     width: 350px;
@@ -316,7 +325,7 @@
   }
   
   .vendors-image:hover{
-    transform: scale(1.1);
+    transform: scale(1.2);
   }
 }
 
