--- a/src/components/Nav/topnav.css
+++ b/src/components/Nav/topnav.css
@@ -6,7 +6,7 @@
 
 #nav-container{
     width: 100% !important;
-    height: 17vh !important;
+    height: 12.5vh !important;
     background-color: black !important;
     position: fixed;
     top: 0;
@@ -23,7 +23,7 @@ a{
 
 @media (min-width: 767px){
     #nav-container{
-        height: 10vh !important;
+        position: relative;
     }
 
     nav#navbar{
@@ -67,9 +67,15 @@ a{
     }
 }
 
-@media(min-width: 1439px){
+@media(min-width: 1023px){
     nav#navbar{
         height: 15vh;
+    }
+}
+
+@media(min-width: 1439px){
+    nav#navbar{
+        height: 19vh;
     }
 
     img#navlogo-2{
@@ -84,7 +90,7 @@ a{
 
 @media(min-width: 1879px){
     nav#navbar{
-        height: 12vh;
+        height: 14vh;
     }
 
     img#navlogo-2{
@@ -94,6 +100,12 @@ a{
     ul#nav-links{
         font-size: 20px;
         width: 70vw;
+    }
+}
+
+@media(min-width: 2559px){
+    nav#navbar{
+        height: 24vh;
     }
 }
 
