--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -3,6 +3,11 @@
     margin-top: 10px;
     padding: 0 8px;
   }
+
+  h2.home-headers{
+    font-size: 45px;
+    color: rgb(21, 170, 148);
+  }
   
   #upper-container{
     margin-top: 120px;
@@ -77,9 +82,6 @@
   .card-icons{
     transition: transform .4s;
     color: rgb(194, 225, 20) !important;
-  }
-
-  .card-icons:hover{
   }
 
   #lower-container{
