--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -8,12 +8,12 @@ div#stock-ticker-container{
   max-width: 950px;
   padding: 0 10px;
   margin: 160px 0 60px 0;
-  
 }
 
 h1.headline{
   font-family: 'SubwayTicker';
-  color: rgb(111, 195, 95)!important;
+  /* color: rgb(111, 195, 95)!important; */
+  color: rgba(255, 255, 255, 0.801) !important;
   font-size: 45px !important;
   white-space: nowrap;
   margin: 0 auto;
