--- a/src/styles/about.css
+++ b/src/styles/about.css
@@ -33,10 +33,23 @@ h3.about-names{
     transition: transform .4s;
 }
 
+.about-offer-header{
+    color: rgb(21, 170, 148);
+}
+
 .about-card:hover{
-    border: 2px solid rgb(194, 225, 20);
+    border: 2px solid rgb(21, 170, 148);
     background-color: rgb(21, 21, 22);
+    box-shadow: 2px 2px 25px rgba(0, 0, 0, 0.541);
     transform: scale(1.05);
+}
+
+.about-card:hover .about-page-icon{
+    color: rgb(21, 170, 148) !important;
+}
+
+.about-card:hover .about-offer-header{
+    color: white;
 }
 
 .headshot-card{
@@ -63,6 +76,8 @@ img.img{
 
 
 .buttons:hover{
+    background-color: rgb(21, 21, 22);
+    box-shadow: 2px 2px 25px rgba(0, 0, 0, 0.541);
     transform: scale(1.1);
 }
 
