--- a/src/styles/contact.css
+++ b/src/styles/contact.css
@@ -49,6 +49,8 @@
 }
 
 #form-submit:hover{
+    background-color: rgb(21, 21, 22);
+    box-shadow: 2px 2px 25px rgba(0, 0, 0, 0.541);
     transform: scale(1.1);
 }
 
