--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -4,6 +4,10 @@
     padding: 0 8px;
   }
 
+  h1.home-headers{
+    margin-top: 200px !important;
+  }
+
   h2.home-headers{
     font-size: 45px;
     color: rgb(21, 170, 148);
@@ -44,7 +48,9 @@
   }
   
   h4#pdf-link:hover{
-    transform: scale(1.3);
+    background-color: rgb(21, 21, 22);
+    box-shadow: 2px 2px 25px rgba(0, 0, 0, 0.541);
+    transform: scale(1.01);
   }
 
   #mid-container{
