--- a/src/styles/terms.css
+++ b/src/styles/terms.css
@@ -1,16 +1,21 @@
 #terms-container{
-    margin: 40px auto;
+    margin: 140px 0 80px 0;
 }
 
 .terms-paragraph{
-    width: 374px;
+    width: 95vw;
     padding: 20px 0;
+    margin: 0 auto;
+}
+
+.terms-header{
+    color: rgb(21, 170, 148);
 }
 
 @media(min-width: 767px){
     #terms-container{
-        margin: 0 auto;
-        padding-bottom: 80px;
+        /* margin: 0 auto; */
+        /* padding-bottom: 80px; */
     }
     
     .terms-paragraph{
