--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -7,7 +7,7 @@ div#stock-ticker-container{
   background-color: rgba(0, 0, 0, 0.308) !important;
   max-width: 950px;
   padding: 0 10px;
-  margin: 160px 0 60px 0;
+  margin: 100px auto 60px auto !important;
 }
 
 h1.headline{
