--- a/src/styles/about.css
+++ b/src/styles/about.css
@@ -2,12 +2,26 @@ div#about-main{
     margin-top: 140px;
 }
 
+a{
+    padding-top: 0 !important;
+}
+
 h1.about-headers{
     margin: 40px auto;
 }
 
 h3.about-names{
     margin-top: 15px;
+}
+
+.twitter-icon{
+    margin: 0 auto;
+    transition: transform .4s;
+}
+
+.twitter-icon:hover{
+    transform: scale(1.3);
+    color: white !important;
 }
 
 #about-container{
@@ -53,13 +67,16 @@ h3.about-names{
 }
 
 .headshot-card{
+    margin: 0 auto !important;
     padding: 0;
+    display: flex;
+    flex-direction: column;
 }
 
 img.img{
     width: 95vw !important;
     border-radius: 10px;
-    margin-top: 40px;
+    margin: 40px auto auto auto;
 }
 
 .buttons{
