--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -383,6 +383,12 @@
   }
 }
 
+@media(min-width: 1279px){
+  h2.home-headers{
+    padding-top: 40px;
+  }
+}
+
 @media(min-width: 1439px){
   
   div#main-banner{
