made a custom media query for 13" Macbbooks to allow for Safari to show properly

--- a/src/components/Nav/RightNav/rightNav.css
+++ b/src/components/Nav/RightNav/rightNav.css
@@ -17,8 +17,8 @@
 
 img#navlogo-1{
     width: 30vw;
-    margin: 0 40px;
-    padding-top: 100px;
+    margin: 0 44px;
+    /* padding-top: 100px; */
     position: absolute;
     bottom: 7vh;
     z-index: -20;
@@ -35,6 +35,10 @@ div.links-container{
    flex-direction: column;
    text-align: left;
    width: 90%;
+}
+
+.active{
+    color: white !important;
 }
 
 @media(min-width: 424px){
