added cpanel.yml file for deployment

--- a/src/styles/bob.css
+++ b/src/styles/bob.css
@@ -86,3 +86,12 @@ div#about-bob-container{
         width: 35vw;
     }
 }
+
+@media(min-width: 2559px){
+
+    p.bob-paragraph{
+        max-width: 800px;
+        padding: 0 100px;
+        font-size: 20px;
+    }
+}
