--- a/src/styles/about.css
+++ b/src/styles/about.css
@@ -148,7 +148,7 @@ img.img{
     }
 
     #about-container p{
-        width: 30vw !important;
+        max-width: 700px !important;
         font-size: 18px;
     }
 
