--- a/src/styles/contact.css
+++ b/src/styles/contact.css
@@ -2,13 +2,20 @@
     margin: 140px auto;
 }
 
+form#subscribe-form{
+    margin: 0 auto !important;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+}
+
 #contact-card{
     background-color: rgb(36, 35, 39);
     align-items: center;
     border: 2px solid rgba(63, 62, 62, 0.651);
     border-radius: 8px;
     width: 95vw;
-    margin: 0 auto !important;
+    margin: 20px auto !important;
     padding: 40px 0;
 }
 
@@ -25,6 +32,7 @@
     width: 80vw;
     height: 4vh;
     padding-left: 7px;
+    margin: 0 auto;
 }
 
 #message{
@@ -37,7 +45,7 @@
 
 #subscribe{
     display: flex;
-    margin-left: 30px;
+    /* margin-left: 30px; */
 }
 
 #subscribe h5{
