--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -128,7 +128,7 @@
   }
   
   p{
-    width: 80vw;
+    width: 65vw;
     font-size: 15px;
     text-indent: 0.8rem;
     padding: 0 8px;
@@ -192,6 +192,7 @@
   p.path-text{
     text-align: center;
     margin-bottom: 20px;
+    width: 225px;
   }
   
   #lower-container{
